<resources>
    <string name="app_name">Project</string>
    <string name="do_you_want_to_enter_your_monthly_income_or_annual_salary_m_for_monthly_and_y_for_yearly">Do you want to enter your monthly income or annual salary? (\'M\' for monthly and \'Y\' for yearly)</string>
    <string name="enter_your_income">Enter your income:</string>
    <string name="back_to_main_menu">Back to Main Menu</string>
    <string name="monthly_or_yearly">Monthly or Yearly?</string>
    <string name="input_income">Enter Your Income:</string>
    <string name="BackButton">BACK TO MAIN MENU</string>
    <string name="TopHeader_TextView">BUDGET TRACKER</string>
    <string name="view_payments">VIEW PAYMENTS</string>
    <string name="view_income">VIEW INCOME</string>
    <string name="your_budget">YOUR BUDGET</string>
    <string name="please_select_one_of_the_options_below">Please Select one of the Options Below:</string>
    <string name="budgetimagemain">budgetimagemain</string>
    <string name="monthly_or_yearly_income">monthly(M)_or_yearly(Y)</string>
    <string name="montly_or_yearly_income">M or Y</string>
    <string name="Paymentbutton">ENTER COSTS</string>
    <string name="IncomeButton">ENTER INCOME</string>
    <string name="BudgetButton">YOUR BUDGET</string>
    <string name="input_MonthlyOrYearly_income">M or Y:</string>
    <string name="ToptextView">Please Enter the Following:</string>
    <string name="RentOrMortgageText">Rent/Mortgage:</string>
    <string name="RentOrMortgageInput">Enter amount: $</string>
    <string name="CarInsurance_text">Car Insurnace/Payments:</string>
    <string name="CarPaymentText">Enter amount: $</string>
    <string name="CreditCardText">Enter amount: $</string>
    <string name="CreditCard_Input">Credit Card Payments:</string>
    <string name="Food_text">Food Expenses:</string>
    <string name="Food_input">Enter amount: $</string>
    <string name="Savings_text">Savings:</string>
    <string name="Savings_input">Enter amount: $</string>
    <string name="wants_text">Wants:</string>
    <string name="strings_text">Wants:</string>
    <string name="total_bills">Total Bills: $%s</string>
    <string name="income_after_bills">Income After Bills: $%s</string>
    <string name="bills_total">Bills Total: $%s</string>
    <string name="wants_total">Wants Total: $%s</string>
    <string name="wants_food">Food: $%s</string>
    <string name="wants_emergency">Emergency: $%s</string>
    <string name="wants_retirement">Retirement: $%s</string>
    <string name="wants_entertainment">Entertainment: $%s</string>
    <string name="wants_clothing">Clothing: $%s</string>
    <string name="wants_travel">Travel: $%s</string>
    <string name="savings_total">Savings Total: $%s</string>
    <string name="total_left">Total Left: $%s</string>
</resources>